--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
-    <string name="app_name">Magarus</string>
+    <string name="app_name">AsiGames</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="screen1">One hour of pure enterteinment, you couldn\'t help going out with your friends for a wolk!</string>
     <string name="screen2">Try to guess the hidden objects and be faster than your friends!</string>
     <string name="screen3">loose all your money paying a lot of kebab to all your friends!</string>
+    <string name="looserString">Qualisiasi cosa farai, l\'unico obiettivo che raggiungerai sarà fare schifo. \nCon affetto,</string>
 </resources>
